# openEMS

./: .gitattributes  .gitignore  AI_POLICY.md  CLAUDE.md  CMakeLists.txt  CPP_RUST_COMPARISON.md  Cargo.toml  Doxyfile  FEATURE_PARITY.md  INSTALL  LANGUAGE_DECISION.md  NEWS  PORTING_STATUS.md  README  README.md  TODO  WindowsInstall.md  astyle.sh  known_bugs  known_problems  main.cpp  openEMS.pro  openEMS.sh  openEMS_MPI.pro  openEMS_MPI.sh  openems.cpp  openems.h  openems_global.h  pyproject.toml  test_run.py  vcpkg-configuration.json  vcpkg.json
Common/: CMakeLists.txt  engine_interface_base.cpp  engine_interface_base.h  operator_base.cpp  operator_base.h  process_efield.cpp  process_efield.h  process_hfield.cpp  process_hfield.h  processcurrent.cpp  processcurrent.h  processfieldprobe.cpp  processfieldprobe.h  processfields.cpp  processfields.h  processfields_fd.cpp  processfields_fd.h  processfields_sar.cpp  processfields_sar.h  processfields_td.cpp  processfields_td.h  processing.cpp  processing.h  processintegral.cpp  processintegral.h  processmodematch.cpp  processmodematch.h  processvoltage.cpp  processvoltage.h  readme.txt
FDTD/: CMakeLists.txt  cartoperator.cpp  cartoperator.h  engine.cpp  engine.h  engine_cylinder.cpp  engine_cylinder.h  engine_cylindermultigrid.cpp  engine_cylindermultigrid.h  engine_ext_cylinder.cpp  engine_ext_cylinder.h  engine_ext_cylindermultigrid.cpp  engine_ext_cylindermultigrid.h  engine_ext_dispersive.cpp  engine_ext_dispersive.h  engine_ext_lorentzmaterial.cpp  engine_ext_lorentzmaterial.h  engine_ext_mur_abc.cpp  engine_ext_mur_abc.h  engine_ext_pml_sf.cpp  engine_ext_pml_sf.h  engine_ext_upml.cpp  engine_ext_upml.h  engine_extension.cpp  engine_extension.h  engine_interface_cylindrical_fdtd.cpp  engine_interface_cylindrical_fdtd.h  engine_interface_fdtd.cpp  engine_interface_fdtd.h  engine_interface_sse_fdtd.cpp  engine_interface_sse_fdtd.h  engine_mpi.cpp  engine_mpi.h  engine_multithread.cpp  engine_multithread.h  engine_sse.cpp  engine_sse.h  engine_sse_compressed.cpp  engine_sse_compressed.h  excitation.cpp  (+51 more)
FDTD/extensions/: CMakeLists.txt  OptimizeCondSheetParameter.m  cond_sheet_parameter.h  engine_ext_absorbing_bc.cpp  engine_ext_absorbing_bc.h  engine_ext_cylinder.cpp  engine_ext_cylinder.h  engine_ext_cylindermultigrid.cpp  engine_ext_cylindermultigrid.h  engine_ext_dispersive.cpp  engine_ext_dispersive.h  engine_ext_excitation.cpp  engine_ext_excitation.h  engine_ext_lorentzmaterial.cpp  engine_ext_lorentzmaterial.h  engine_ext_lumpedRLC.cpp  engine_ext_lumpedRLC.h  engine_ext_mur_abc.cpp  engine_ext_mur_abc.h  engine_ext_pml_sf.cpp  engine_ext_pml_sf.h  engine_ext_steadystate.cpp  engine_ext_steadystate.h  engine_ext_tfsf.cpp  engine_ext_tfsf.h  engine_ext_upml.cpp  engine_ext_upml.h  engine_extension.cpp  engine_extension.h  engine_extension_dispatcher.h  operator_ext_absorbing_bc.cpp  operator_ext_absorbing_bc.h  operator_ext_conductingsheet.cpp  operator_ext_conductingsheet.h  operator_ext_cylinder.cpp  operator_ext_cylinder.h  operator_ext_dispersive.cpp  operator_ext_dispersive.h  operator_ext_excitation.cpp  operator_ext_excitation.h  (+16 more)
nf2ff/: CMakeLists.txt  main.cpp  nf2ff.cpp  nf2ff.h  nf2ff.pro  nf2ff_calc.cpp  nf2ff_calc.h
python/: README.md  pyproject.toml  setup.py
python/Examples/: Coax_W_WG_Ports.py  MSL_With_RLC_LE.py
python/Tests/: CPW_E.csv  CPW_H.csv  CPW_With_WG_Ports.py  Coax_Hr.csv  Coax_W_WG_Ports.py  MSL_With_Local_Absorbers.py  Rect_Waveguide_W_Local_Absorbers.py  test_Automesh.py  test_Ports.py  test_XML_RoundTrip.py  test_openEMS.py
python/Tutorials/: Bent_Patch_Antenna.py  CRLH_Extraction.py  Coax_Mode_1.mat  Coax_Mode_2.mat  Coax_With_Waveguide_Ports.py  Dipole_SAR.py  Helical_Antenna.py  MSL_Mode_1.mat  MSL_Mode_2.mat  MSL_NotchFilter.py  MSL_With_Local_Absorbers.py  MSL_With_Waveguide_Ports.py  RCS_Sphere.py  Rect_Waveguide.py  Simple_Patch_Antenna.py
python/Tutorials/rectangular_resonant_cavity/: main.py
python/bootstrap/: find_package.py  setuptools_build_meta_custom.py
python/doc/: conf.py  convert_tutorials.py  index.rst  nf2ff.rst  openEMS.rst  openEMS_API.rst  ports.rst
python/doc/Tutorials/: Antenna_Tutorials.rst  Bent_Patch_Antenna.rst  CRLH_Extraction.rst  Helical_Antenna.rst  Intro_Tutorials.rst  MSL_NotchFilter.rst  MicroWave_Tutorials.rst  RCS_Sphere.rst  Rect_Waveguide.rst  Simple_Patch_Antenna.rst  index.rst
python/examples/rectangular_resonant_cavity/: README.md
python/openEMS/: __init__.py  _nf2ff.cpp  _nf2ff.pxd  _nf2ff.pyx  automesh.py  nf2ff.py  openEMS.cpp  openEMS.pxd  openEMS.pyx  physical_constants.py  ports.py  sar_calculation.pxd  sar_calculation.pyx  sar_utils.py  utilities.py
python/openEMS/GUI/: __init__.py  openEMS_GUI.py
rust-openems/: BENCHMARK_RESULTS.md  Cargo.toml
rust-openems/examples/: benchmark.rs
rust-openems/src/: lib.rs
rust-openems/src/arrays/: field.rs  mod.rs  simd.rs
rust-openems/src/extensions/: dispersive.rs  local_absorbing_bc.rs  lumped_rlc.rs  mod.rs  mur_abc.rs  pml.rs  tfsf.rs
rust-openems/src/fdtd/: compressed.rs  cylindrical.rs  cylindrical_multigrid.rs  engine.rs  engine_interface.rs  excitation.rs  gpu_engine.rs  mod.rs  operator.rs  shaders.wgsl  simulation.rs
rust-openems/src/geometry/: mod.rs
rust-openems/src/io/: hdf5.rs  mod.rs  vtk.rs  xml.rs
rust-openems/src/nf2ff/: mod.rs
rust-openems/src/processing/: array.rs  fields_fd.rs  mod.rs  mode_match.rs  probes.rs  sar.rs
rust-openems/src/tools/: cli.rs  denormal.rs  mod.rs  (+2 more)
tools/: AdrOp.cpp  AdrOp.h  CMakeLists.txt  ErrorMsg.cpp  ErrorMsg.h  ExpenseLog.cpp  ExpenseLog.h  aligned_allocator.h  array_ops.cpp  array_ops.h  base_file_io.cpp  base_file_io.h  constants.h  denormal.h  flat_array_ops.h  global.cpp  global.h  hdf5_file_reader.cpp  hdf5_file_reader.h  hdf5_file_writer.cpp  hdf5_file_writer.h  sar_calc.cpp  sar_calculation.cpp  sar_calculation.h  signal.cpp  signal.h  useful.cpp  useful.h  vtk_file_io.cpp  vtk_file_io.h  vtk_file_writer.cpp  vtk_file_writer.h
tools/arraylib/: README.md  array_e.h  array_ij.h  array_ijk.h  array_nijk.h
(+228 files in other folders)
