[package]
name = "openems"
version = "1.0.0"
edition = "2021"
authors = ["openEMS contributors"]
description = "High-performance FDTD electromagnetic field solver"
license = "GPL-3.0"
repository = "https://github.com/thliebig/openEMS"
keywords = ["fdtd", "electromagnetic", "simulation", "physics"]
categories = ["science", "simulation"]

[lib]
name = "openems"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "openems"
path = "src/main.rs"

[[bin]]
name = "nf2ff"
path = "src/bin/nf2ff.rs"

[dependencies]
# SIMD and vectorization with runtime dispatch
wide = "0.7"
# Multi-dimensional arrays
ndarray = { version = "0.16", features = ["rayon"] }
# Parallel iterators
rayon = "1.10"
# Complex numbers
num-complex = "0.4"
# Numeric traits
num-traits = "0.2"
# FFT
rustfft = "6.2"
# HDF5 file support - use pure Rust alternative for static linking
hdf5-metno = { version = "0.9", optional = true }
# XML parsing
quick-xml = "0.37"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Command line parsing
clap = { version = "4.5", features = ["derive"] }
# Logging
log = "0.4"
env_logger = "0.11"
# Error handling
thiserror = "2.0"
anyhow = "1.0"
# Python bindings
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"], optional = true }
numpy = { version = "0.23", optional = true }
# Aligned memory allocation
aligned-vec = "0.6"
# Progress bars
indicatif = "0.17"
# Timing
instant = "0.1"
# Memory mapping for large files
memmap2 = "0.9"
# Crossbeam for better concurrency primitives
crossbeam = "0.8"
# Bytemuck for safe transmutes
bytemuck = { version = "1.21", features = ["derive"] }
# Libc for low-level system calls (signal handling)
libc = "0.2"

[features]
default = []
python = ["pyo3", "numpy"]
hdf5 = ["hdf5-metno"]

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
tempfile = "3.10"

[[bench]]
name = "fdtd_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Target-specific configurations for static linking
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+avx2"]

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+avx2", "-C", "link-self-contained=yes"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "target-feature=+avx2"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "target-feature=+neon"]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+avx2"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+avx2"]

[package.metadata.docs.rs]
all-features = true
